nginx/ingress.yml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-nginx
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.ingress.test
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
          path: /
